--- a/draft/alexpub.tex
+++ b/draft/alexpub.tex
@@ -17,7 +17,7 @@
  
 % Full title of the paper (Capitalized)
 % \Title{Effect of Nanovoid on Fracture Process of Two-Phase $\gamma$($\rm TiAl$)+$\alpha_2$($\rm Ti_3Al$) Alloy}
-\Title{Atomic Investigation on Cold Deformation Behavior of Two Phase TiAl Polycrystal with and without Void Defect}
+\Title{Atomic Investigation on Cold Deformation Behavior of Two Phase Ti-Al Polycrystal with and without Void Defect}
 % Author Orchid ID: enter ID or remove command
 \newcommand{\orcidauthorA}{0000-0001-8385-4439} % Add \orcidA{} behind the author's name
 \newcommand{\orcidauthorB}{0000-0002-9582-6301} % Add \orcidB{} behind the author's name
@@ -49,16 +49,16 @@ $^{2}$ \quad State Key Laboratory of Advanced Processing and Recycling of Non-fe
 %\conference{} % An extended version of a conference paper
 
 % Abstract (Do not insert blank lines, i.e. \\) 
-\abstract{Cold deformation behavior of polycrystalline metallic materia is affected by dislocation, nano void and other defects. Existing studies on two phase TiAl alloy covers about deformation behavior mainly on marco scale. This paper mainly concern about cold deforamtion mechanism of the two phase TiAl ally at atomic scale, and  the role of void defect in deformation process. Molecular dynamics simulation was performed to study the evolution of a spherical nano void in $\alpha_2$+$\gamma$ two-phase titanium-aluminium alloy under uniaxial tension. Simulation cases of model with different size and position of void were performed. The results show that i) $\gamma$ phase is the major deformation source of the two phase alloy; ii) Voids defect detracts the strength of the two phase alloy, however the position of void affect the degree of this substraction: voids located at the $\alpha_2$/$\gamma$ phase boundary have significant detract to strength.}
+\abstract{Cold deformation behavior of polycrystalline metallic materia is affected by dislocation, nano void and other defects. Existing studies on $\alpha_2(\rm{Ti_3Al})$+$\gamma(\rm{TiAl})$  two phase Ti-Al alloy covers about deformation behavior mainly on marco scale. This paper focus on the cold deformation mechanism of two phase Ti-Al alloy at micro scale, and  the role of void defect in deformation process. Molecular dynamics simulations were performed to study the evolution of microstructure in the model under uniaxial tension. Interaction between spherical nano void with different size and position was also examined in the simulation. The results show that i) $\gamma$ phase is the major deformation source of the two phase alloy; ii) Voids defect detracts the strength of the two phase alloy, however the position of void affect the degree of this substraction: voids located at the $\alpha_2$/$\gamma$ phase boundary have significant detract to strength.}
 % Keywords
-\keyword{two phase TiAl alloy; void; molecular dynamics}
+\keyword{two phase Ti-Al alloy; void defect; molecular dynamics}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \begin{document}
 
 \section{Introduction}
 % and brittle rapture failure 
-Poor Ductility at room temperature in Ti-Al alloy strongly affects the safety of fracture of structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of TiAl alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$ alloys and PST crystals\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale cracks are initially easily formed at defects in the casting process, such as voids and inclusions \cite{Tang2014}. 
+The light weight intermeatlic alloy Ti-Al alloys are promising high temperatture structural materials because of their great corrison resistance at high temperature. Comparing with nickle based alloy, titanium based aluminide alloys have lower density and are pron to be utilized in combustionnor, turbine, and other components work at high temperature ranging from 500 degree to 900 degree. The performance of inner combustion engine with components made of Ti-6Al-4V was improved  20 as a results of the weight of components decreased 30\%~40\%. With the advancement of non-ferrous metallurgy, titanium aluminide based components has better economical efficiency than ever before.  , TiAl based alloys have good prospects for applications in aero- space and automobile industry, e.g. as turbine blades and valves[4–7]. Poor ductility of Ti-Al alloy  at room temperature strongly affects the safety structures like turbo of aircraft engine and combustion generator \cite{Munz2017}. Deformation phenomena of Ti-Al alloys have been widely studied in order to overcome the problems associated with the limited ductility and damage tolerance.  Much of the work has been performed on single phase $\gamma$ alloys and PST crystals\cite{Appel2016}. Rapture failure at the macroscopic scale can be attributed to nucleation, growth and propagation of cracks, but at the microscopic scale cracks are initially easily formed at defects in the casting process, such as voids and inclusions \cite{Tang2014}. 
 
 A great number of literature covers a wide range of parameters such as alloy composition, microstructure and deformation temperature. Two-phase titanium aluminum alloys with proper phase distribution and grain size exhibit better mechanical performance compared with monolithic constituents $\gamma$(TiAl) and $\gamma$($\rm Ti_3Al$) alloy \cite{Kim1995}. Due to difficulties in observing the dynamic process during deformation wit experiments, MD simulation has become a effective method to investigate micro deformation mechanism. Defects such as grain boundary, void and segregation plays an significant role in the process of fracture \cite{Larsen2016}. Multiscale method have been applied to study deformation behavior polycrystal with single aluminum element \cite{Groh2009} and single titanium element \cite{Liu2018}. It's necessary to carefully examine the revolution of defects and its influence on the fracture process at atomic scale. 
 
@@ -106,14 +106,9 @@ where $E_{total}$ is the total energy of the system, $\rho_{h,i}$, is the host e
 	\label{tab:lattice_parameter}
 \end{table} 
 
-$\gamma $ TiAl has a fcc-centered tetragonal with an $L1_0$ structure, and $\alpha_2 -\rm Ti_3Al$ has hcp structure, the two types of initial cells are shown in Fig. \ref{fig:tial-cell}, and the constructing parameters are givin by Table \ref{tab:lattice_parameter}. 
-In order to study the deformation mechanism of the two phase alloy and the effect of void defect, three types of models were created: Type-1.model without any void defect; Type-2. models with different size void inside $\alpha_2$ phase; Type-3. models with void at $\alpha_2-\gamma$ interface. 
-\ref{tab:lattice_parameter}. The simulation cells of two phase polycrystalline with an initially spherical void at different position are shown in figure . 
-Periodic boundary conditions (PBC) are applied along all three directions, that makes poly crystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 4.6 million atoms. The grain orientation and size were randomly created with Voronoi method with code ATOMSK \cite{Hirel2015}, and resulting in the arbitrary shape and orientation of the grains.
+$\gamma $ TiAl has a fcc-centered tetragonal with an $L1_0$ structure, and $\alpha_2 -\rm Ti_3Al$ has hcp structure, the two types of initial cells are shown in Fig. \ref{fig:tial-cell}, and the constructing parameters are givin by Table \ref{tab:lattice_parameter}. Periodic boundary conditions (PBC) are applied along all three directions, that makes poly crystal with periodic nanovoid structures. The initial dimension of simulation cell is $L_x =200$ \si{\angstrom}, $L_y = $180\si{\angstrom}, $L_z = 210$ \si{\angstrom}, and each model contains about 4.6 million atoms. The grain orientation and size were randomly created with Voronoi method with code ATOMSK \cite{Hirel2015}, and resulting in the arbitrary shape and orientation of the grains.
 Uniaxial load was applied to the model at a strain rate of $5\times10^8\ \rm{s}^{-1}$.
- 
-
-	
+% In order to study the deformation mechanism of the two phase alloy and the effect of void defect, three types of models were created: Type-1.model without any void defect; Type-2. models with different size void inside $\alpha_2$ phase; Type-3. models with void at $\alpha_2-\gamma$ interface. \ref{tab:lattice_parameter}. The simulation cells of two phase polycrystalline with an initially spherical void at different position are shown in figure .
 \subsection{Analysis method}
 In order to identify typical defects in the deformed model, a hybrid analysis method was used with free code ovito\cite{Stukowski2010a}.Dislocation is visualized by DXA method, and Centro-symmetry parameter(CSP) is used to tell grain boundary from  $\alpha_2$ phase and $\gamma$ phase. The definition of CSP is as following:
 
@@ -141,7 +136,7 @@ Stage - \uppercase\expandafter{\romannumeral3}: cracking stage, ranging from $\e
 Stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discussion concentrates on deformation phenomena that rely on the elastro-plastic codeformation of the $\gamma$ and $\alpha_2$ phases and on the particular point defect situation occurring in two phase alloys. 
 
 \begin{table}[ht]
-	\caption{Key point during tensile process}
+	\caption{Key points during tensile process}
 	\centering
 	\begin{tabular}{l c c c c c c c c c c}
 		\toprule
@@ -163,41 +158,14 @@ Stage - \uppercase\expandafter{\romannumeral4}: fracture stage. Following discus
 % Due to this effect ( $\alpha_2$ + $\gamma$ ) alloys exhibit some remarkable properties that are unlike those of either constituent.
 \subsection{Deformation Mechanism of Two Phase TiAl Alloy without Void Defects}
 
-
-
-
-
-\begin{figure}[ht] 
-	\centering
-	\includegraphics[width=1\linewidth]{img/def2}
-	\caption{Microstructure evolution inside $\gamma$ phase(a), $\alpha_2$ phase(b) at key point 1 to 10}
-	\label{fig:Defect}
-\end{figure}
-
-Deformation process of model without void under uniaxial load is shown by stress-strain curve Fig. \ref{fig:deformation-pf} and snapshots of atom configuration at the 10 key points in Fig. \ref{fig:Defect}.  Atoms with ordered configuration  of $\gamma$ phase grains have been removed in Fig.\ref{fig:Defect}a,\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}b, the defects of $\alpha_2$ phase have been left.  
-
-
-The results show that, at stage \uppercase\expandafter{\romannumeral1}, the structure of the model is under typical elastic deformation and the size of simulation box enlarged due to the loading, the deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of stage \uppercase\expandafter{\romannumeral1}. A  great number of dislocation emitted inside $\gamma$ phase at stage 2, however, the dislocation inside $\gamma$ phase was emitted after key point 6 shown by Fig. \ref{fig:Defect}b. The deformation of $\alpha_2$ phase is even more earlier than $\gamma$ phase during yield stage, thus local displacement of two phase are incompatible during yield stage.  $\gamma$ phase (TiAl) deforms by octahedral glide of ordinary dislocations with the Burgers vector b=1/2[110] and super dislocations with the Burgers vectors $b=[101]$ and $b=1/2[11\overline{2}]$. 
-% The other potential deformation mode is mechanical twinning have been reported along $1/6[11\overline{2}]{111}$, have not been observed in the simulation because of room temperature cannot offer enough energy for dislocation nucleation.
-
-\begin{equation}\label{eq:dis1}
-	[\ 0\ 1\ \overline{1}\ ] \to 1/2 [\ 1\ 1\ \overline{2}\ ]+1/2[\ \overline{1}\ 1\ 0\ ]
-\end{equation}
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics[width=1\linewidth]{"img/disl-gamma"}
-	\caption{Dislocation in $\gamma$}
-	\label{fig:dis-alpha_2}
-\end{figure}
-
 The mobility of dislocation is affected by structure of crystal, loading condition and temperature, and experiments have shown that the velocity of dislocation motion is sensitive to stress and temperature\cite{Stein1960}. The brittleness of the two phase Ti-Al alloy attributed to the poor mobility of dislocation at room temperature. The velocity of a screw dislocation can be estimated by Escaig's elastic model \cite{Escaig1968}, it can be written as 
 
 \begin{equation}\label{eq:temp-dis}
 v = v_0 \exp(-\Delta H(\tau^*)/kT)
 \end{equation}
 
-where the prefactor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ is the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be evaluated under different loading conditions, thus we chose  $\Delta H(\tau_1^*) > \Delta H(\tau_2^*) > \Delta H(\tau_3^*)$ in formula \ref{eq:temp-dis}, normalized velocity is shown in fig \ref{fig:temp}. The relative velocity  of dislocation rise along with increase of  stress, the speed of dislocation 
+where the prefactor $v_0$ gives the velocity that would be obtained for each potential mobility, $L$ is the free length of screw character of dislocation, $\Delta H(\tau^*)$ is activation enthalpy determined by loading conditions. The effect of temperature on the mobility can be evaluated under different loading conditions, thus we chose  $\tau_1^*>\tau_2^*>\tau_3^*$ in formulation \ref{eq:temp-dis}, normalized velocity is shown in Fig \ref{fig:temp}. The relative velocity  of dislocation rise along with increase of  stress, the speed of dislocation is relatively low at room temperature, and it is more sensitive to temperature than shear stress. 
+
 
 \begin{figure}[ht]
 	\centering
@@ -211,27 +179,49 @@ where the prefactor $v_0$ gives the velocity that would be obtained for each pot
 	\begin{minipage}{0.495\textwidth}		
 		\includegraphics[width=1\linewidth]{img/disum}
 		\centering
-		\caption{Dislocation length during different stages}
+		\caption{Dislocation length}
 		\label{fig:disum}
 	\end{minipage}
 \end{figure}
 
 
-The orientation of slip is changed because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces the orientation of the slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1}_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{}. From Fig. \ref{fig:Defect}, of the two constituents of ($\alpha_2$+$\gamma$) alloys, the $\alpha_2$ phase is more difficult to deform. A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of [a]-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes\ref{fig:Defect}, which is by far the easiest slip system in $\alpha_2$ single crystals. 
+In Fig. \ref{fig:disum}, length of different types of dislocation are plotted at four stages. Dislocations are recognized and identified using the dislocation analysis (DXA) ofOVITO. $\gamma$ phase (TiAl) deforms by octahedral glide of ordinary dislocations with the Burgers vector b=1/2[110] and super dislocations with the Burgers vectors $b=[101]$ and $b=1/2[11\overline{2}]$
+
+\begin{equation}\label{eq:dis1}
+[\ 0\ 1\ \overline{1}\ ] \to 1/2 [\ 1\ 1\ \overline{2}\ ]+1/2[\ \overline{1}\ 1\ 0\ ]
+\end{equation}
+
+The length of Shorckley dislocation with Burgers vector $1/6[1 1 2]$ increase sharply during yield stage of the deformation process in Fig. \ref{fig:disum}, but the length of perfect dislocation fluctuate at a low level. That is mainly because decomposition of the perfect  dislocations which is given by formulation \ref{eq:dis2}, and the structure spontaneously transform into intrinsic stacking fault in Fig. \ref{fig:dis-alpha_2}.
+
+\begin{equation}\label{eq:dis2}
+1/2 [\ 1\ \overline { 1 }\ 2\ ] \rightarrow 1/6 [\ 1\ \overline { 1 }\ 2\ ]  + 1/3 [\ 1\ \overline { 1 }\ 2\ ]
+\end{equation}
+
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics[width=1\linewidth]{"img/disl-gamma"}
+	\caption{Dislocation in $\gamma$}
+	\label{fig:dis-alpha_2}
+\end{figure}
+
+% Deformation process of model without void under uniaxial load is shown by stress-strain curve Fig. \ref{fig:deformation-pf} and
+Snapshots of atom configuration at the 5 of 10 key points are shown by Fig. \ref{fig:Defect}.  Atoms with ordered configuration  of $\gamma$ phase grains have been removed in Fig.\ref{fig:Defect}a,\ $\alpha_2$ phase and defects inside grains have been left. Similarly, $\gamma$ phase grain have been removed in Fig. \ref{fig:Defect}b, the defects of $\alpha_2$ phase have been left.  The results show that, at stage \uppercase\expandafter{\romannumeral1}, the structure of the model is under typical elastic deformation and the size of simulation box enlarged due to the loading, the deformation of the two phase are compatible. Emission of dislocation and evolution of defects initiated at the end of stage \uppercase\expandafter{\romannumeral1}. A  great number of dislocation emitted inside $\gamma$ phase at stage 2, however, the dislocation inside $\gamma$ phase was emitted after key point 6 shown by Fig.  \ref{fig:Defect}b. The deformation of $\alpha_2$ phase is even more earlier than $\gamma$ phase during yield stage, thus local displacement of two phase are incompatible during yield stage.  
+
+
+ 
+\begin{figure}[ht] 
+	\centering
+	\includegraphics[width=1\linewidth]{img/def2}
+	\caption{Microstructure evolution inside $\gamma$ phase(a), $\alpha_2$ phase(b) at key point 1 to 10}
+	\label{fig:Defect}
+\end{figure}
 
 
 
-%\begin{figure}[ht]
-%	\centering
-%	\includegraphics[width=1\linewidth]{img/plane}
-%	\caption{close packed plane of $\gamma\ \rm{phase}\ (\rm{TiAl})$ and $\alpha (\rm{Ti_3Al})$ phase }
-%	\label{fig:unit-cell}
-%\end{figure}
 
-	
-The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2[110] dislocation gliding in one $\gamma$ grain has to be converted in to a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of the Burgers vectors and the shear module are different.
-
-Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamella, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
+The orientation of slip is changed in Fig. \ref{fig:Defect}, because the crystallographically available slip and directions are not continuous across the interface. This may significantly reduce the Schmid factor and thus impede slip transfer. At the $\gamma/\gamma$ interfaces the orientation of the slip plan could change through a relevantly large angle of about 90 degree. Reorientation of slip is always required at the $\alpha_{2}/\gamma$ interface; the smallest angle between the corresponding slip planes ${1 1 1}_{\gamma}$ and ${ 1 0 -1 0}_{\alpha_2}$ is about 19 degree \cite{intro-structure}. From Fig. \ref{fig:Defect}, of the two constituents of ($\alpha_2$+$\gamma$) alloys, the $\alpha_2$ phase is more difficult to deform. A reason for the unequal strain partitioning between the $\alpha_2$ and $\gamma$ phase is certainly the strong plastic anisotropy of the $\alpha_2$ phase. TEM examinations performed on tensile tested lamellar alloys have revealed that the limited plasticity of the $\alpha_2$ phase is mainly carried by local slip of [a]-type dislocations with the Burgers vector $b=1/3[11\overline{2}0]$ prism planes shown by Fig. \ref{fig:Defect}, which is by far the easiest slip system in $\alpha_2$ single crystals. 
+The core of a dislocation intersecting an interface often needs to be transformed. For example, an ordinary 1/2[110] dislocation gliding in one $\gamma$ grain has to be converted in to a $[101]$ super dislocation with the double Burgers vector gliding in an adjacent $\gamma$ grain. At the $\alpha_2/\gamma$ interface the dislocations existing in the $D0_{19}$ structure have to be transformed into dislocations consistent with the $L1_0$structure. These core transformations are associated with a change of the dislocation line energy because the lengths of the Burgers vectors and the shear module are different. Dislocations crossing semi-coherent boundaries have to intersect the misfit dislocations, a process that involves elastic interaction, jog formation and the incorporation of gliding dislocations into the mismatch structure of the interface.When the slip is forced to cross $\alpha_2$ lamella, pyramidal slip of the $\alpha_2$ phase is required, which needs an extremely high shear stress.
 
 
 \subsection{The effect of void on the strength of material}
@@ -243,9 +233,9 @@ Dislocations crossing semi-coherent boundaries have to intersect the misfit disl
 	\label{fig:model-creation}
 \end{figure}
 
-Void with different sizes was placed at $\alpha_2-\gamma$ phase boundary, inside $\gamma$ phase respectively. Effect of void on the strength at different position under uniaxial tension is shown in Fig.\ref{fig:stress&strain}. The strength of materials with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The existence of void have little impact on the elastic properties of the material, and the model without void defect has best strength 5.3 GPa, the yield stress of model with void is smaller. located inside $\alpha_2$ phase detracts the strength of the material most, and the void at phase boundary have less impact on the strength.
+In Fig. \ref{fig:model-creation}, voids with different size: 2A, 5A, 10A, 15A were placed  at $\alpha_2-\gamma$ phase boundary, inside $\gamma$ phase respectively. The strength of materials with void in different size and at different position is shown in Fig.\ref{fig:stress&strain}. The existence of void have little impact on the elastic properties of the material, and the model without void defect has best strength 5.3 GPa, the yield stress of model with void is smaller. located inside $\alpha_2$ phase detracts the strength of the material most, and the void at phase boundary have less impact on the strength.
            
-The effect of size is expectable that the greater voids detracts the strength of the materials more, however, it has been observed in the simulation that there is a critical value about 15A for voids at different position. The voids larger than 15 A have dramatic detraction to the strength of the material. Conventional definition of strength of materials with geometry subtraction was applied to the model, and theoretical strength of the models was calculated by formulation \ref{eq:section}:
+The effect of size is expectable that the greater voids detracts the strength of the materials more, however, it has been observed in the simulation that there is a critical value about 15A for voids at different position. The voids larger than 15 \AA\ have dramatic detraction to the strength of the material. Conventional definition of strength of materials with geometry subtraction was applied to the model, and theoretical strength of the models was calculated by formulation \ref{eq:section}:
 	
 	\begin{equation} \label{eq:section} 
 	\sigma^* = \sigma_0 \cdot \frac{A^*}{A_0}
@@ -278,12 +268,7 @@ where $\sigma_0$ is the strength of the model without void defects 5.26 Gpa, and
 %	\label{fig:yield}
 %\end{figure}
 	
-Voids with different size: 2A, 5A, 10A, 15A were placed into the model respectively. It has been observed that voids detracts the strengths of the material. The max stress stress of the simulation cell decreases as the volume of voids are larger. From Fig \ref{fig:stress&strain}, there is a critical value of void radius about 15A, the void greater than 15A cause serious detraction of strength of material. 
-Engineering stress is calculated
-	$$ \sigma = S/A$$
-The rate of decrease of loading area are smaller comparing with the detraction of strength, so it can be assumed that the yield yield behavior and strength is much more related with local behavior of grain boundaries and void.
-	
-Grain and phase boundaries are obstacles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grain boundary and void determines the fracture mode of the TiAl alloy.
+In Fig. \ref{fig:strength} It has been observed that voids detracts the strengths of the material. The max stress stress of the simulation cell decreases as the volume of voids are larger. From Fig \ref{fig:stress&strain}, there is a critical value of void radius about 15A, the void greater than 15A cause serious detraction of strength of material.  The rate of decrease of loading area are smaller comparing with the detraction of strength, so it can be assumed that the yield yield behavior and strength is much more related with local behavior of grain boundaries and void. Grain and phase boundaries are obstacles to deformation process, thus the stability of boundaries have great impact on the strength of materials. Interactive between grain boundary and void determines the fracture mode of the TiAl alloy.
 
 \subsection{Evolution of spherical void in the simulation with intragranular spherical voids}
 
@@ -295,12 +280,14 @@ Grain and phase boundaries are obstacles to deformation process, thus the stabil
 \end{figure}
 
 
-The role of void can be concluded as two main parts: source of dislocation and obstacles to dislocations.  Second-phase particles, precipitated within, as a consequence of a thermal treatment, or taken up, as a consequence of a material processing route, into a matrix of the first, dominant phase, disrupt, more or less (as possibly associated with the occurrence of incoherent or coherent interfaces;the long-range translation symmetry of the matrix. They may induce considerable misfit-stress fields and thus can influence material properties pronouncedly. Such stress fields surrounding the second-phase particles can be due to misfit between the volume occupied by the second-phase particle when unconstrained and the space (“hole”) put at its disposal by the matrix. Such misfit can arise due to specific volume differences induced by precipitation or by different thermal expansion or shrinkage upon heating or cooling the specimen. A possibly favorable effect of second-phase particles is a contribution to the enhancement of mechanical strength. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. In the discussion of the Frank–Read source for dislocation (-line) production  it was made clear that second-phase particles can serve as obstacles for dislocation migration: the stress fields surrounding the second-phase particles can be of “antagonistic” nature and “block” propagation of the stress field of a migrating dislocation: the second-phase particle acts as “pinning point”. It was already indicated that in order that a dislocation can pass two pinning points a critical shear stress is needed that depends on the distance between the obstacles (which can be second-phase particles):
+The role of void can be concluded as two main parts: source of dislocation and obstacles to dislocations.  Second-phase particles, precipitated within, as a consequence of a thermal treatment, or taken up, as a consequence of a material processing route, into a matrix of the first, dominant phase, disrupt, associated with the occurrence of incoherent or coherent interfaces;the long-range translation symmetry of the matrix. They may induce considerable misfit-stress fields and thus can influence material properties pronouncedly. Such stress fields surrounding the second-phase particles can be due to misfit between the volume occupied by the second-phase particle when unconstrained and the space (“hole”) put at its disposal by the matrix. Such misfit can arise due to specific volume differences induced by precipitation or by different thermal expansion or shrinkage upon heating or cooling the specimen. A possibly favorable effect of second-phase particles is a contribution to the enhancement of mechanical strength. Considering yielding of a material as related to glide of dislocations, any mechanism obstructing dislocation glide improves the mechanical strength. In the discussion of the Frank–Read source for dislocation (-line) production  it was made clear that second-phase particles can serve as obstacles for dislocation migration: the stress fields surrounding the second-phase particles can be of “antagonistic” nature and “block” propagation of the stress field of a migrating dislocation: the second-phase particle acts as “pinning point”. It was already indicated that in order that a dislocation can pass two pinning points a critical shear stress is needed that depends on the distance between the obstacles (which can be second-phase particles):
 \begin{equation} \label{eq:orowan} 
 \tau_0 = Gb/d
 \end{equation}
 
-where d represents the distance between A and B and thus reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process (with $\tau_0$ as the Orowan (shear) stress. As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sides of a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interior after dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systems towards the spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from the dash circle 
+where d represents the distance between A and B and thus reflects the dependence of the critical shear stress $\tau_0$ on the second-phase particle density and distribution. This mechanism for hardening is designated as the Orowan process (with $\tau_0$ as the Orowan (shear) stress.
+
+As a result of the Orowan process, upon passage of the pinning points by a series of gliding dislocations, a system of concentric loops is formed around the second-phase particles. Consequently, the effective average distance between the second-phase particles has decreased to d which implies a necessary increase of the value of critical shear stress required for continuation of dislocation glide. The width of a burgers vector, will be generated at both sides of a crystal along the direction of the burgers vector after dislocation traversing the entire crystal, as is shown in \ref{fig:orowan}. A small tep will be formed at spherical void surface toward the void interior after dislocation absorption at spherical void surfaces. If a great number of dislocation slip along their respective systems towards the spherical nanovoid in all directions, and are absorbed at spherical void surfaces, the spherical nanovoid will eventually shrink from the dash circle 
 \section{conclusion}
 In this paper, deformation behavior of two phase TiAl alloy under tensile loading was simulated with MD method. The mechanism of deformation was investigated under atomic scale, and the effect of void defect on the properties of two phase TiAl alloy was also studied.  The conclusions are as follows:
 
@@ -312,7 +299,7 @@ In this paper, deformation behavior of two phase TiAl alloy under tensile loadin
 \reftitle{References}
 \bibliography{ref/VIOLET-ref.bib}
 \funding{This research was funded by the National Natural Science Foundation of China (No. 51665030) and the Program for Changjiang Scholars and Innovative Research Team in Universities of the Ministry of Education of China (No. IRT-15R30) and the Doctoral Research Foundation of Lanzhou University of Technology.}
-mark
+
 \end{document}
 
 
